--- a/audiro/src/main/webapp/WEB-INF/views/fragments/header.jspf
+++ b/audiro/src/main/webapp/WEB-INF/views/fragments/header.jspf
@@ -127,7 +127,7 @@
                 </li>               
                 <!-- 여행일기 -->
                 <li class="nav-item">
-                    <c:url var="travelReviewPage" value="/post/review/mypage" />
+                    <c:url var="travelReviewPage" value="/post/review/list" />
                     <a class="nav-link" href="${travelReviewPage}">여행후기</a>
                 </li> 
                 <!-- 여행일기 -->
