--- a/audiro/src/main/webapp/WEB-INF/views/fragments/header2.jspf
+++ b/audiro/src/main/webapp/WEB-INF/views/fragments/header2.jspf
@@ -4,7 +4,7 @@
 
 <div class="container-header">
     <a href="/audiro">
-        <c:url var="imgLogo" value="/images/audiro12.png" />
+        <c:url var="imgLogo" value="/images/logo30.png" />
         <img src="${imgLogo}" alt="logo" id="logo" />
     </a>
 </div>
