--- a/audiro/src/main/webapp/static/css/signin.css
+++ b/audiro/src/main/webapp/static/css/signin.css
@@ -39,11 +39,12 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 #id, #password {
     border: none;
     border-radius: 0;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #082567;
 }
 
 #btnSignin {
     margin-bottom: 15px;
+    background-color: #082567;
 }
 
 .container-link {
