--- a/audiro/src/main/webapp/static/css/travel-search.css
+++ b/audiro/src/main/webapp/static/css/travel-search.css
@@ -1,15 +1,76 @@
 @charset "UTF-8";
 
+main {
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+
+#btnReset {
+	padding-top: 11px;
+	border: none;
+	background-color: white;
+}
+
+#btnReset i {
+	font-size: 20px;
+}
+
+.tag-container p {
+	margin-top: 15px;
+	margin-bottom: 15px;
+	font-weight: bold;
+}
+
 button.badge {
+	margin: 5px 5px 5px 0;
     border: none;
+    font-size: 13px;
+}
+
+#inputSearch {
+	height: 40px;
+}
+
+#btnSearch {
+	height: 40px;
+	background-color: #082567;
+	border: none;
+}
+
+#tagContainer {
+	margin-top: 15px;
+}
+
+#cardContainer {
+	margin-top: 5px;
+}
+
+#cardContainer .col-4 {
+	padding: 10px;
+}
+
+#cardContainer .card {
+	height: 300px;
 }
 
 .img-destination {
-    width: 100%;
-    border-radius: 5px;
+	width: 100%;
+	height: 240px;
+	object-fit: cover;
+	border-radius: 5px;
+}
+
+.title-container {
+	display: flex;
+	justify-content: space-between;
+	padding: 15px;
 }
 
 .img-like {
     width: 25px;
     height: 25px;
+}
+
+.pagination {
+	margin-top: 80px;
 }
