--- a/audiro/src/main/webapp/static/css/plan.css
+++ b/audiro/src/main/webapp/static/css/plan.css
@@ -4,6 +4,73 @@ body {
 	font-size: 14px;
 	line-height: 1.5;
 }
+
+#container1{
+	border-radius: 10px;
+    padding: 35px 30px;
+}
+.row{ overflow: hidden;}
+
+.favDestination {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    width: 100%;
+    flex-grow: 1;
+    margin: 10px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    width: 100%;
+    height: 100%;
+}
+
+.card-img-top {
+    width: 100%;
+    height: auto;
+    flex-grow: 1;
+}
+
+.card-body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.cardTitle {
+	font-size:10px;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+}
+
+.fav{
+   
+	border-radius: 10px;
+    box-shadow: 0px 15px 3px 1px gray;
+    padding: 35px 30px;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+.fav.img{
+	 width: 100%;
+    height: 100%;
+}
+.fav.h5{
+	font-size: 10px;
+}
+.fav-img-top{
+	width: 100%;
+	height: auto;
+	object-fit: cover;
+}
 input, h2, ul, #dayContainer, #planContainer, button, .favDestination{
 	font-family: 'Cafe24SsurroundAir' !important;
 }
@@ -17,11 +84,15 @@ input, h2, ul, #dayContainer, #planContainer, button, .favDestination{
 	cursor: pointer;
 }
 .plans.active {
-	background-color: yellow; /* Change this to your desired color */
+	background-color: #27334c; /* Change this to your desired color */
 }
 
 ::after, ::before{
 	box-sizing:border-box;
+}
+
+#title, #startDate, #endDate{
+	box-shadow: 0px 15px 3px -1px gray;
 }
 
 #planContainer h5 {
@@ -34,9 +105,17 @@ input, h2, ul, #dayContainer, #planContainer, button, .favDestination{
 	border-style: inset;
 	border-width: 1px;
 }
+li.darkColor {
+    color: #27334c;
+}
+
+li.brightColor {
+    color: white;
+}
 
 .plans.click{
-	background-color: #F6F1B4;
+	background-color: #27334c;
+	color:white;
 }
 
 
