--- a/audiro/src/main/webapp/static/css/plan.css
+++ b/audiro/src/main/webapp/static/css/plan.css
@@ -54,7 +54,7 @@ body {
 .fav{
    
 	border-radius: 10px;
-    box-shadow: 0px 15px 3px 1px gray;
+    box-shadow: 5px 5px 5px gray;
     padding: 35px 30px;
     padding-right: 5px;
     padding-left: 5px;
@@ -91,9 +91,6 @@ input, h2, ul, #dayContainer, #planContainer, button, .favDestination{
 	box-sizing:border-box;
 }
 
-#title, #startDate, #endDate{
-	box-shadow: 0px 15px 3px -1px gray;
-}
 
 #planContainer h5 {
 	font-family: 'Cafe24SsurroundAir';
@@ -106,11 +103,14 @@ input, h2, ul, #dayContainer, #planContainer, button, .favDestination{
 	border-width: 1px;
 }
 .darkColor {
-    color: #27334c;
+     color: white;
+     background-color: #27334c;
 }
 
 .brightColor {
-    color: white;
+   
+     color: #27334c;
+     background-color:white;
 }
 
 .plans.click{
