--- a/audiro/src/main/webapp/static/css/travel-search.css
+++ b/audiro/src/main/webapp/static/css/travel-search.css
@@ -74,3 +74,23 @@ button.badge {
 .pagination {
 	margin-top: 80px;
 }
+
+.pagination .page-link {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  color: #000;
+}
+
+.page-item.active .page-link {
+ z-index: 1;
+ background-color: #b9c1d4;
+ border-color: #ccc;
+ color: #000;
+ font-weight: bold;
+}
+
+.pagination .page-link:focus, .pagination .page-link:hover {
+  background-color: #e3e6ed; 
+  border-color: #ccc;
+  color: #000;
+}
