--- a/audiro/src/main/webapp/static/css/favorite_list.css
+++ b/audiro/src/main/webapp/static/css/favorite_list.css
@@ -1,62 +1,85 @@
 @charset "UTF-8";
-
+	
+	.favorite {
+        display: flex;
+    }
+    .favorite-content {
+        margin-left: 310px;
+    }
 	.title {
-         margin: 20px 0 0 0 ;
+         margin: 50px 0 0 0 ;
          text-align: center;
     }
-    .card-wrapper {
-         display: flex;
-         justify-content: center;
-         width: 100%;
-    }
-    .card {
-        width: 1050px; 
-        padding: 20px;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        border-radius: 8px;
+    .nav-tabs {
+    		margin-top: 30px;
+    		margin-bottom: 0;
         justify-content: center;
-        	display: flex;
+        border-bottom: none !important;         
+    }    
+    .nav-tabs .nav-item {
+	    margin-bottom: -1px; /* 탭 아래쪽 테두리 제거 */
+	    border: none !important;
+	}
+    .nav-tabs .nav-link {
+        font-size: 15px; 
+        font-family: 'Cafe24SsurroundAir';
+        border: none !important;
+        color: #000000;
+    }
+	.nav-tabs:hover .nav-link:hover {
+	    color: #000000; /* 비활성화된 탭의 텍스트 색상을 검은색으로 변경 */
+	    border: none;
+	}
+	.nav-tabs .nav-link.active {
+	    font-weight: bold;
+	    border: none !important;
+	}
+    #sort-select {
+    		margin-top: 10px;
+    		margin-right: 40px;
+    		margin-bottom: 0px;
+    }
+    .tab-content {
+    		border-top: 0;
+	    margin-top: -1px;
+    		width: 1000px; 
+    		min-height: 800px;
+	    display: flex;
+	    justify-content: flex-start;
+	    align-items: center;
+	    margin-top: 15px;
+	    margin-left: 15px;
+	    flex-wrap: wrap;
 	    flex-direction: column;
 	    overflow: hidden;
-    }  
-    .nav-tabs {
-        justify-content: center;
-        
-    }    
-    .nav-tabs .nav-link {
-        font-size: 16px; 
-    }
-    
-    .tab-content {
-	    display: flex;
-	    justify-content: center;
-	    margin-top: 15px;
-	    flex-wrap: wrap;
 	}
 	#favorite-list {
 	    display: flex;
 	    flex-wrap: wrap;
-	    justify-content: flex-start; /* 아이템들을 시작 지점에 정렬 */
-	    
 	    width: 100%;
-	    
 	}
 	.favorite-list-container {
 	    width: 300px;
-	   
+    		height: 400px;
 	    border-radius: 10px;
 	    overflow: hidden;
 	    position: relative;
-	    margin: 10px; /* 이미지 간 여백 조정 */
+	    margin: 15px; /* 이미지 간 여백 조정 */
 	    display: flex;
     		flex-direction: column;
+    		transition: transform 0.3s ease, box-shadow 0.3s ease;
 	}	
 	.favorite-list-container img {
 	    width: 100%;
-	    height: 70%;
+	    height: 200px;
 	    object-fit: cover;
 	    margin: 0; 
     		padding: 0;
+    		transition: transform 0.3s ease;
+	}
+	.favorite-list-container:hover {
+	    transform: scale(1.05); /* 카드 크기 확대 */
+	    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); /* 그림자 추가 */
 	}
 	.title-like-container {
 	    display: flex;
@@ -65,22 +88,60 @@
 	    margin-top: auto; /* 자동 여백 추가 */
 	    padding: 10px;
 	}
-	.card-title {
+	.card-title a {
 		font-size: 15px;
     		margin: 0;
+    		color: black;
+    		text-decoration: none;    		
 	}
-	
+	.card-title {
+		font-size: 15px;
+		margin-top: 5px;
+    		margin-left: 30px;
+    		color: black;  		
+	}
 	.like img {
+		margin-top: 5px;
+    		margin-right: 20px;
 		width: 25px;
     		height: 25px;
     }
     @keyframes grow { 
-			0% { transform: scale(1); }
-		    50% { transform: scale(1.5); }
-		    100% { transform: scale(1); }
-		}
+    		0% { transform: scale(1); }
+		50% { transform: scale(1.5); }
+		100% { transform: scale(1); }
+	}
 		
-		.like-animation {
-		    animation: grow 0.3s ease-in-out;
-		}
+	.like-animation {
+		animation: grow 0.3s ease-in-out;
+	}
+	#recently-viewed-container h3 {
+		font-size:13px;
+		justify-content: center;
+		display: flex;
+		font-family: "Nanum Gothic Coding", monospace;
+	}
+	#recently-viewed-container {
+	    margin-top: 200px;
+	    max-width: 150px; 
+	}
+	
+	#recently-viewed img {
+	    width: 100%;
+	    height: 100px;
+	    margin-bottom: 15px;
+	    cursor: pointer;
+	    /* border: 1px solid rgba(0, 0, 0, 0.2); */
+	    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); /* 흐릿한 테두리 */
+		opacity: 0.95; /* 이미지 연하게 */
+	}
+	#recently-viewed img:hover {
+	    transform: scale(1.01); /* 카드 크기 확대 */
+	    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); /* 그림자 추가 */
+		opacity: 1; /* 이미지 원래대로 */
+	    transition: transform 0.3s ease, box-shadow 0.3s ease, border 0.3s ease; /* 애니메이션 추가 */
+	}	
+	.recent-item {
+	    display: block;
+	}
     
