--- a/audiro/src/main/webapp/static/css/home.css
+++ b/audiro/src/main/webapp/static/css/home.css
@@ -1,14 +1,16 @@
 @charset "UTF-8";
 
-		body {
-		    background: 
-		    		/* url('../images/bg22.png') no-repeat 22% 1%, */ 
-		    		/* url('../images/bg21.png') no-repeat -15% 55%, */
-		    		/* url('../images/bg21.png') no-repeat 110% 35%; */
-            /* background-size: 7% auto, 25% auto, 25% auto; */
-            
-        
+		.modal-body {
+			font-size: 15px;
 		}
+		.modal-dialog {
+            top: 10%; 
+            position: absolute;
+            transform: translateX(-50%);
+        }
+        .modal-footer {
+        		font-size: 13px;
+        }
 		.background-image {
             background-image: url('../images/main.jpg');
             background-size: cover; /* 이미지를 요소에 맞게 조정 */
@@ -40,7 +42,7 @@
         }
         .wrap .rolling-list ul li { 
             width: 400px; 
-            height: 250px; 
+            height: 300px; 
             box-sizing: border-box; 
             border-radius: 0px; 
             margin: 0 5px; 
@@ -48,6 +50,7 @@
             display: flex; 
             align-items: center; 
             flex-shrink: 0; 
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
         .rolling-list.original {
             animation: rollingleft1 60s linear infinite;
@@ -83,7 +86,7 @@
         
         .image-title {
         		font-family: 'BMHannaAir';
-            font-size: 15px;
+            font-size: 17px;
             font-weight: bold;
             position: absolute;
             bottom: 30px;
@@ -95,7 +98,7 @@
         
         .image-descript {
         		font-family: 'BMHannaAir';
-            font-size: 12px;
+            font-size: 15px;
             position: absolute;
             bottom: 2px;
             left: 20px;
@@ -109,7 +112,7 @@
             width: 300px;
             max-width: 500px; /* 최대 너비 제한 */
      		
-            height: 300px;
+            height: 350px;
             border-radius: 0 10px 10px 10px;
             overflow: hidden;
             position: relative;
@@ -134,16 +137,15 @@
 
 		#destination-name {
 			position: absolute;
-			top:5px;
+			top:10px;
 			left: 20%; /* 수평 중앙 정렬 */
 			color: white;
 			padding: 5px;
 			/* font-family: "Nanum Gothic Coding", monospace; */
 			font-family: 'BMHannaAir';
-			font-size: 15px;
+			font-size: 18px;
     			font-weight: bold;
-    			/* text-shadow: -0.5px 0px black, 0px 0.5px black, 0.5px 0px black, 0px -0.5px black; */
-		
+    			text-shadow: 0.5px 0.5px 0 #000, -0.5px -0.5px 0 #000, 0.5px -0.5px 0 #000, -0.5px 0.5px 0 #000;
 		}
 		
        .my-card {
@@ -163,7 +165,7 @@
 		    font-weight: bold;
 		    position: absolute;
 		    top: 50px;
-		    left: 5px;
+		    left: 20px;
 		    color: navy;
 		    z-index: 1;
 		    padding: 5px; /* 내부 여백 설정 */  
@@ -173,8 +175,8 @@
 		    font-size: 15px;
 		    font-weight: bold;
 		    position: absolute;
-		    top: 90px; /* top 위치를 50px로 변경 */
-		    left: 5px; /* left를 추가하여 내용이 카드 안에 들어오도록 설정 */
+		    top: 90px; 
+		    left: 20px; 
 		    color: black;
 		    z-index: 1;
 		    padding: 5px; /* 내부 여백 설정 */		    
@@ -212,26 +214,28 @@
             transform: translate(-50%, -50%);
             width: 70px; 
             height: 70px;
-            background-color: #B22222;
-            
+            background-color: #B22222;   
             clip-path: polygon(0 0, 80% 0, 80% 85%, 50% 70%, 0 100%);
             border: 2px solid white; /* 하얀색 테두리 */
             box-sizing: border-box;
      		display: inline-block;
             z-index: -1;
+            box-shadow: -5px -5px 10px rgba(0, 0, 0, 0.5); /* 왼쪽 위로 그림자 추가 */
         }
-        
+        .top-rank:hover::before {
+		    transition: transform 0.3s ease, box-shadow 0.3s ease; /* 애니메이션 효과 추가 */
+		}
         .like {
             position: absolute;
-            top: 5px;
+            top: 10px;
             right: 20px;
-            width: 30px; 
-            height: 30px;
+            width: 25px; 
+            height: 25px;
         }
         #post-like {
 		    position: absolute;
-		    top: 5px;
-		    right: 10px;
+		    top: 10px;
+		    right: 20px;
 		    width: 25px;
 		    height: 25px;
 		}
@@ -303,5 +307,22 @@
 		.carousel-control-btn:hover {
 		    transform: scale(1.5);
 		}
-				
-        
+		  
+		.carousel-indicators [data-bs-target] {
+		    background-color: #808080 !important; 
+		}
+		.carousel-indicators .active {
+		    background-color: #000000 !important; 
+		} 
+		.carousel {
+		    position: relative;
+		}
+		.carousel-inner {
+		    position: relative;
+		}
+		
+		.carousel-indicators {
+		    margin-top: 10px;
+		    display: flex;
+		    justify-content: center;
+		}
