--- a/audiro/src/main/webapp/static/css/favorite_list.css
+++ b/audiro/src/main/webapp/static/css/favorite_list.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 	
+	body {
+            height: 200vh; /* 스크롤을 테스트하기 위해 페이지 높이를 늘립니다 */
+        }
 	.favorite {
         display: flex;
     }
@@ -122,15 +125,26 @@
 		font-family: "Nanum Gothic Coding", monospace;
 	}
 	#recently-viewed-container {
-	    margin-top: 200px;
-	    max-width: 150px; 
+	    position: absolute;
+	    top: 30vh;
+	    right: 250px; /* 오른쪽에서의 거리 */
+	    z-index: 1000; /* 다른 요소보다 위에 있도록 z-index 설정 */
+	    width: 250px; /* 필요에 따라 너비 조정 */
+	    transition: top 0.3s ease, position 0.3s ease;
+	}
+	
+	#recently-viewed {
+	    max-height: 80vh; 
+	    padding: 10px;
+	    
 	}
 	
 	#recently-viewed img {
 	    width: 100%;
-	    height: 100px;
-	    margin-bottom: 15px;
+	    height: 150px;
+	    margin-top: 20px;
 	    cursor: pointer;
+	    border-radius: 5px;
 	    /* border: 1px solid rgba(0, 0, 0, 0.2); */
 	    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); /* 흐릿한 테두리 */
 		opacity: 0.95; /* 이미지 연하게 */
