--- a/audiro/src/main/webapp/static/css/travel-search.css
+++ b/audiro/src/main/webapp/static/css/travel-search.css
@@ -27,6 +27,11 @@ button.badge {
     font-size: 13px;
 }
 
+.search-container input:focus, .search-container button:focus {
+    box-shadow: none;
+    border: 1px solid #ddd;
+}
+
 #inputSearch {
 	height: 40px;
 }
@@ -35,6 +40,7 @@ button.badge {
 	height: 40px;
 	background-color: #082567;
 	border: none;
+	color: white;
 }
 
 #tagContainer {
@@ -51,13 +57,13 @@ button.badge {
 
 #cardContainer .card {
 	height: 300px;
+	overflow: hidden;
 }
 
 .img-destination {
 	width: 100%;
 	height: 240px;
 	object-fit: cover;
-	border-radius: 5px;
 }
 
 .title-container {
