--- a/audiro/src/main/webapp/static/css/plan.css
+++ b/audiro/src/main/webapp/static/css/plan.css
@@ -14,7 +14,8 @@ body {
 .favDestination {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    align-items: center; /* 수직 방향 중앙 정렬 */
+    justify-content: center;
     width: 100%;
     flex-grow: 1;
     margin: 10px;
@@ -52,7 +53,12 @@ body {
 }
 
 .fav{
-   
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* 수평 방향 중앙 정렬 */
+    justify-content: flex-start; /* 수직 방향 맨 위 정렬 */
+    width: 100%;
+ 	height: 100%; /* 전체 부모 요소를 채우도록 설정 */
 	border-radius: 10px;
     box-shadow: 5px 5px 5px gray;
     padding: 35px 30px;
@@ -63,7 +69,7 @@ body {
 	 width: 100%;
     height: 100%;
 }
-.fav.h5{
+.fav h5{
 	font-size: 10px;
 }
 .fav-img-top{
@@ -150,4 +156,7 @@ img.deleteFavImg{
 	text-align: right;
 }
 
-
+.link{
+	color: inherit; /* 부모 요소의 색상을 상속 */
+    text-decoration: none; /* 밑줄 제거 */
+}
