--- a/audiro/src/main/webapp/static/css/plan.css
+++ b/audiro/src/main/webapp/static/css/plan.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body {
-	font-size: 14px;
+	font-size: 16px;
 	line-height: 1.5;
 }
 
@@ -16,9 +16,9 @@ body {
     flex-direction: column;
     align-items: center; /* 수직 방향 중앙 정렬 */
     justify-content: center;
-    width: 100%;
     flex-grow: 1;
-    margin: 10px;
+    margin-bottom: 20px;
+    margin-top:20px;
 }
 
 .card {
@@ -44,7 +44,7 @@ body {
 }
 
 .cardTitle {
-	font-size:13px;
+	font-size:15px;
     text-align: center;
     white-space: nowrap;
     overflow: hidden;
@@ -61,9 +61,9 @@ body {
  	height: 100%; /* 전체 부모 요소를 채우도록 설정 */
 	border-radius: 10px;
     box-shadow: 5px 5px 5px gray;
-    padding: 35px 30px;
+    /* padding: 35px 30px;
     padding-right: 5px;
-    padding-left: 5px;
+    padding-left: 5px; */
 }
 .fav.img{
 	 width: 100%;
