--- a/audiro/src/main/webapp/static/css/favorite_list.css
+++ b/audiro/src/main/webapp/static/css/favorite_list.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 	
 	body {
-            height: 200vh; /* 스크롤을 테스트하기 위해 페이지 높이를 늘립니다 */
-        }
+        height: 200vh; /* 스크롤을 테스트하기 위해 페이지 높이를 늘립니다 */
+    }
 	.favorite {
         display: flex;
     }
@@ -14,8 +14,8 @@
          text-align: center;
     }
     .nav-tabs {
-    		margin-top: 30px;
-    		margin-bottom: 0;
+    	margin-top: 30px;
+    	margin-bottom: 0;
         justify-content: center;
         border-bottom: none !important;         
     }    
@@ -38,20 +38,20 @@
 	    border: none !important;
 	}
     #sort-select {
-    		margin-top: 10px;
-    		margin-right: 40px;
-    		margin-bottom: 0px;
+    	margin-top: 10px;
+    	margin-right: 40px;
+    	margin-bottom: 0px;
     }
     .tab-content {
-    		border-top: 0;
+    	border-top: 0;
 	    margin-top: -1px;
-    		width: 1000px; 
-    		min-height: 800px;
+    	width: 1000px; 
+    	min-height: 800px;
 	    display: flex;
 	    justify-content: flex-start;
 	    align-items: center;
 	    margin-top: 15px;
-	    margin-left: 15px;
+	    margin-left: 10px;
 	    flex-wrap: wrap;
 	    flex-direction: column;
 	    overflow: hidden;
@@ -63,22 +63,22 @@
 	}
 	.favorite-list-container {
 	    width: 300px;
-    		height: 400px;
+    	height: 400px;
 	    border-radius: 10px;
 	    overflow: hidden;
 	    position: relative;
 	    margin: 15px; /* 이미지 간 여백 조정 */
 	    display: flex;
-    		flex-direction: column;
-    		transition: transform 0.3s ease, box-shadow 0.3s ease;
+    	flex-direction: column;
+    	transition: transform 0.3s ease, box-shadow 0.3s ease;
 	}	
 	.favorite-list-container img {
 	    width: 100%;
 	    height: 200px;
 	    object-fit: cover;
 	    margin: 0; 
-    		padding: 0;
-    		transition: transform 0.3s ease;
+    	padding: 0;
+    	transition: transform 0.3s ease;
 	}
 	.favorite-list-container:hover {
 	    transform: scale(1.05); /* 카드 크기 확대 */
@@ -93,24 +93,27 @@
 	}
 	.card-title a {
 		font-size: 15px;
-    		margin: 0;
-    		color: black;
-    		text-decoration: none;    		
+    	margin: 0;
+    	color: black;
+    	text-decoration: none;    		
 	}
 	.card-title {
 		font-size: 15px;
 		margin-top: 5px;
-    		margin-left: 30px;
-    		color: black;  		
+        margin-left: 30px;
+    	color: black;  		
+	}
+	.card-title:hover {
+	   cursor: pointer;    
 	}
 	.like img {
 		margin-top: 5px;
-    		margin-right: 20px;
+    	margin-right: 20px;
 		width: 25px;
-    		height: 25px;
+    	height: 25px;
     }
     @keyframes grow { 
-    		0% { transform: scale(1); }
+    	0% { transform: scale(1); }
 		50% { transform: scale(1.5); }
 		100% { transform: scale(1); }
 	}
@@ -119,7 +122,7 @@
 		animation: grow 0.3s ease-in-out;
 	}
 	#recently-viewed-container h3 {
-		font-size:13px;
+		font-size:15px;
 		justify-content: center;
 		display: flex;
 		font-family: "Nanum Gothic Coding", monospace;
@@ -135,10 +138,8 @@
 	
 	#recently-viewed {
 	    max-height: 80vh; 
-	    padding: 10px;
-	    
+	    padding: 10px;	    
 	}
-	
 	#recently-viewed img {
 	    width: 100%;
 	    height: 150px;
