Design: 좌우 col-1

--- a/audiro/src/main/webapp/static/css/plan.css
+++ b/audiro/src/main/webapp/static/css/plan.css
@@ -41,7 +41,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px;
+    margin: 5px;
+    margin-top:20px;
     box-sizing: border-box;
 }
 
