--- a/audiro/src/main/webapp/static/css/plan_timeline.css
+++ b/audiro/src/main/webapp/static/css/plan_timeline.css
@@ -8,7 +8,7 @@
 }
 
 .timeline ul {
-	font-family: 'Cafe24SsurroundAir';
+	/* font-family: 'Cafe24SsurroundAir'; */
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
